# SecureChain

./: .gitignore  .riskignore.json  GUI_GUIDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: dependency-risk-scan.yml
demo/: package.fixed.json  package.json  package.vulnerable.json
demo/fixtures/: advisories.json  exploit_intel.json  npm_downloads.json  npm_metadata.json
models/: anomaly.joblib  baseline_metrics.json  classifier.joblib
scripts/: run_gui.py  train_models.py
securechain/: __init__.py  __main__.py  behavioral.py  cli.py  exploit_intel.py  gate.py  manifest.py  pipeline.py  recommend.py  report_html.py  report_json.py  riskignore.py  severity.py  vuln_lookup.py
securechain/gui/: __init__.py  server.py
securechain/gui/static/: index.html
securechain/ml/: anomaly.py  classifier.py  explain.py  features.py  training_data.py
tests/: conftest.py  test_anomaly.py  test_behavioral.py  test_classifier.py  test_e2e.py  test_exploit_intel.py  test_gate_cicd.py  test_html_report.py  test_manifest.py  test_recommend.py  test_riskignore.py  test_severity.py  test_shap.py  test_vuln_lookup.py
tests/fixtures/: manifest.json
